home half set up

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,13 @@ body {
     border: black 4px solid;
     margin: 30px;
 }
+
+.restPics {
+    width: 400px;
+    height: 300px;
+}
+
+.card {
+    border: black 2px solid;
+    margin-top: 20px;
+}
