--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,3 +20,11 @@ body {
     border: black 2px solid;
     margin-top: 20px;
 }
+
+.contact-text {
+    border-right: black 1px solid;
+}
+
+.card-content {
+    text-align: left;
+}
