--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@ body {
 .card {
     border: black 2px solid;
     margin-top: 20px;
+    font-size: 1em;
 }
 
 .contact-text {
@@ -27,4 +28,10 @@ body {
 
 .card-content {
     text-align: left;
+}
+
+.homeBanner {
+    background-color: navajowhite;
+    border: solid black 2px;
+    margin-top: 20px;
 }
