--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,7 @@
 }
 
 .card {
-    border: black 2px solid;
+    border: black 3px solid;
     margin-top: 20px;
     font-size: 1em;
 }
@@ -51,4 +51,8 @@ body {
     min-width: 1024px;
     width: 100%;
     height: 100%;
+}
+
+#contactUsPage {
+    margin: auto;
 }
