--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,7 @@
     border: black 3px solid;
     margin-top: 20px;
     font-size: 1em;
+    border-radius: 10px;
 }
 
 .contact-text {
@@ -31,6 +32,7 @@
     background-color: navajowhite;
     border: solid black 2px;
     margin-top: 20px;
+    border-radius: 10px;
 }
 
 body {
