--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,3 +58,9 @@ body {
 #contactUsPage {
     margin: auto;
 }
+
+#overHeaderInfo {
+    background-color: gray;
+    font-size: 1.5em;
+    color: white;
+}
